Finished documenting container creation steps